[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "research-repo"
version = "0.1.0"
description = "A CLI tool for managing a research repository"
authors = [
    { name="Lewis Wambugu", email="lewiswambugu01@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
research-repo = "lib.repoapp:main"
